# .juniper

./: .aliases  .gitignore  .start-bspwm  user-dirs.dirs
Xresources/: juniper.xrdb  main.xrdb  urxvt.xrdb
alacritty/: alacritty.toml
bspwm/: bspwmrc  external_rules
cava/: config
dunst/: dunstrc
neofetch/: config.conf  full.conf  mini.conf
nvim/: init.vim  juniper.vim  plug.vim
nvim/after/syntax/: rust.vim
nvim/after/syntax.bak/: python.vim  rust.vim
polybar/: config.ini
pygmentize-juniper/: .gitignore  PKGBUILD
pygmentize-juniper/src/: juniper.py  pyproject.toml
rofi/: config  config.rasi  desktops.sh  juniper.rasi  system.sh
spicetify/juniper-text/: color.ini  user.css
sxhkd/: sxhkdrc
weechat/: buflist.conf  fset.conf  irc.conf  logger.conf  plugins.conf  script.conf  weechat.conf
